[package]
name = "testdatadog"
version = "0.1.0"
authors = ["Corentin Henry <corentinhenry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.4.0", features = ["full"] }
opentelemetry = { version = "0.12.0", features = ["tokio-support"] }
opentelemetry-contrib = { version = "0.4.0", features = ["datadog", "reqwest-client"] }
tracing = "0.1.25"
tracing-opentelemetry = "0.11.0"
tracing-subscriber = { version = "0.2.17", features = ["env-filter", "parking_lot"] }
